2018-12-09  Sam Varshavchik  <mrsam@courier-mta.com>

	* Implement WM_HINTS. Specify that we handle input processing.
	Option to set urgent hint for dialog windows. Set alert and stop
	dialogs to urgent, by default.

0.12

2018-12-03  Sam Varshavchik  <mrsam@courier-mta.com>

	* Create the toolbox layout manager.

	* Images: image filenames without a path component search the
	only theme directory.

2018-12-02  Sam Varshavchik  <mrsam@courier-mta.com>

	* Remove the need to specify window labels when preserving
	window positions. Automatically use the same label when the window
	was created.

2018-11-28  Sam Varshavchik  <mrsam@courier-mta.com>

	* main_window.C: overhaul parameters to methods that create dialogs.
	Use create_dialog_args and standard_dialog_args for the dialog id,
	modal flag, and the optional layout manager.

2018-11-27  Sam Varshavchik  <mrsam@courier-mta.com>

	* dialog_handler.C: Add set_dialog_position().

2018-11-26  Sam Varshavchik  <mrsam@courier-mta.com>

	* generic_window.C: Add set_window_type(), on_stabilized().

2018-11-25  Sam Varshavchik  <mrsam@courier-mta.com>

	* Clean up create_checkbox() and create_radio(), replacing overloads
	with a reference to checkbox_config and radio_config, which may be
	default-constructed, and inherit from a common image_button_config
	superclass. Replace some data in the internal
	create_image_button_info with a reference to the image_button_config.

	* Implement a formal visible-focusoff_border() in new_listlayoutmanager
	and image_button_config, rather than documenting theme border
	names.

0.11

2018-11-23  Sam Varshavchik  <mrsam@courier-mta.com>

	* combobox/custom_comboboxlayoutmanager.C: A combo-box popup
	wasn't getting closed if the currently-selected item gets selected
	again.

	* list layout manager settings for hierarchical lists.

2018-11-22  Sam Varshavchik  <mrsam@courier-mta.com>

	* list layout manager: added optional row_alignments setting.
	Implemented hierindent{}.
