@@ -1,5 +1,7 @@
 2018-12-09  Sam Varshavchik  <mrsam@courier-mta.com>
 
+	* Implement synchronization of window repainting.
+
 	* Implement WM_HINTS. Specify that we handle input processing.
 	Option to set urgent hint for dialog windows. Set alert and stop
 	dialogs to urgent, by default.
